--- a/index.html
+++ b/index.html
@@ -4,22 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <div>
-            <p id="titulo">Calculadora Básica</p>
+        <div id="box">
+            <h2>Calculadora Básica</h2>
+            Número 1:<input type="number" class="numero">
+            <p></p>
+            Número 2:<input type="number" class='numero'>
+            <p></p>
+            <input type="submit" value="Somar(+)">
+            <input type="submit" value="Subtrair(-)">
+            <p></p>
+            <input type="submit" value="Multiplicar(*)">
+            <input type="submit" value="Dividir(/)">
+            <br>
+            <p></p>
+            Resultado:
         </div>
-        <div>
-            <p id="primeiro">Numero 1:</p>
-            <input id="numero1" type="number">
-        </div>
-        <div>
-            <p id="segundo">Numero 2:</p>
-            <input id="numero2" type="number">
-        </div>
-    </div>
-    <script src="js/index.js"></script>
+        <script src="script.js"></script>
 </body>
 </html>
